--- a/vite-project/src/components/Navbar.css
+++ b/vite-project/src/components/Navbar.css
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 1rem 2rem;
+  background-color: #17191f;
 }
 
 .navbar h2 a {
@@ -12,4 +13,12 @@
 .navbar ul {
   display: flex;
   gap: 1rem;
+}
+
+.new-btn{
+  font-weight: bold;
+  border:  1px solid #fff;
+  padding: .5rem 1rem;
+  border-radius: 1rem;
+  opacity: 1;
 }
